# OpenGL_DVD_Logo

./: OpenglApp.sln  README.md
OpenglApp/: CMakeLists.txt  OpenglApp.vcxproj  main.cpp
